# linuxSerial

./: .gitignore  CMakeLists.txt  main  main.cpp  queue.cpp  queue.h  serial.cpp  serial.h
inc/: event.h  queue.h  serial.h  util.h
src/: event.cpp  queue.cpp  serial.cpp  util.cpp
